--- a/testing.sagebrush.bradford/files.in
+++ b/testing.sagebrush.bradford/files.in
@@ -4,11 +4,11 @@ Stepwat_Inputs				# folder containing stepwat setup files
 
 g_logfile.log				# name of logfile (can also be stdout)
 
-Grid Inputs/grid_setup.in		# name of grid setup file
-Grid Inputs/grid_disturbances.csv	# name of grid disturbances input file
-Grid Inputs/grid_soils.csv		# name of grid soils input file
-Grid Inputs/grid_seed_dispersal.in	# name of grid seed dispersal setup file
-Grid Inputs/grid_initSpecies.csv	# name of grid species input file
+Grid_Inputs/grid_setup.in		# name of grid setup file
+Grid_Inputs/grid_disturbances.csv	# name of grid disturbances input file
+Grid_Inputs/grid_soils.csv		# name of grid soils input file
+Grid_Inputs/grid_seed_dispersal.in	# name of grid seed dispersal setup file
+Grid_Inputs/grid_initSpecies.csv	# name of grid species input file
 
 files.in				# name of stepwat files.in file
 
