--- a/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/species.in
+++ b/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/species.in
@@ -91,7 +91,7 @@
 #TM - gusa and chvi rates from C&L 1990
 #ARTR age from Ferguson 1964- Annual rings in big sagebrush
 # need to re-assess maxbio values for pose and koma
-#
+# maxage for LIPU comes from Walsh, Roberta A. (1993) Liatris punctata. In: Fire Effects Information System, [Online]. U.S. Department of Agriculture, Forest Service, Rocky Mountain Research Station, Fire Sciences Laboratory (Producer). Retrieved 11-26-2011
 #TM 10.6.2015 - testing different irate for ARTR: found 0.02 or 0.03 works best for ARTR
 #		ALSO tested max biomass for ARTR - found 400 worked best but is flexible 200-500 with above irates
 #		ALSO tested max age for ARTR - found that model is not very sensitive to max age but literature shows 100-150 max age
@@ -105,7 +105,7 @@
  acmi       4    0  0.42600 0.900    2       3    0.15000    6   0.035   5.000      y       3       2  0.0100     0
  phho       4   10  0.42600 0.900    2       3    0.15000    6   0.035   5.000      n       3       2  0.0100     1
  arfr       5   12  0.42600 0.900    2       3    0.15000    2   0.035   7.480      n       3       2  0.0100     1
- lipu       5   12  0.42600 0.900    2       3    0.15000    4   0.035   7.480      n       0       2  0.0100     0
+ lipu       5   35  0.42600 0.900    2       3    0.15000    4   0.035   7.480      n       0       2  0.0100     0
  brar       6    1  0.94700 0.900    2       3    0.01500    10  0.020   5.000	    n       0       2  0.0000     1
  vuoc       6    1  0.94700 0.900    2       1    0.01500    16  0.020   5.000      n       0       2  0.0000     0
  spp1       7    1  0.94700 0.900    2       3    0.01500    2   0.020   0.429      n       0       2  0.0000     0
