--- a/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/species.in
+++ b/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/species.in
@@ -4,7 +4,7 @@
 # Blank lines, white space, and comments may be used freely,
 # however, the order of input is important
 
-# name = 4 char genus/species name
+# name = 4 char genus/species name; gusa = Gutierrezia sarothrae, oppo = Opuntia polyacantha
 # rg = number of resource group to which this species belongs,
 #      based on the order they were entered in the rgroups input file,
 #      which is read before this file.  Note that a group cannot
