--- a/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/rgroup.in
+++ b/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/rgroup.in
@@ -57,7 +57,7 @@
 #            if > 1 yearly interval, after start year (start).  
 #            Overrides grazingyear.
 # proportion_grazing = proportionally grazing on grazingyear based on  grazing_frq.
-
+# grazingfreq_startyr = grazing fequency start year from there grazing frequency will be valid
 
 #TM - density values from Biondini et al 1998 - used density% in Table 2 for p.cool.forb (Achillea millefolium) and
 #	p.warm.forb (Grindelia squarrosa)
@@ -70,19 +70,19 @@
 # space parameter for shrubs was a guess (KP) 
 #
 #TM 10.6.2015 - tested various stretch values for sagebrush and found stretch of 8 to be best paired with irate 0.02
-# name     space  density maxest slow stretch xres  estann  on  startyr killyr killfreq_startyr killfrq  extirp  mort  xgrow  veg_prod_type  proportion_killed proportion_recovered grazing_frq proportion_grazing
+# name     space  density maxest slow stretch xres  estann  on  startyr killyr killfreq_startyr killfrq  extirp  mort  xgrow  veg_prod_type  proportion_killed proportion_recovered grazing_frq proportion_grazing  grazingfreq_startyr
 
- sagebrush     0.320  1.0000   1  0.0500   8     1       0   1      1        0      0       0       0     1  0.00000   2  0.50  0.80 0  0.50
- a.cool.forb   0.030  5.0000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   4  0.60  0.50 0  0.40
- a.warm.forb   0.020  3.0000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   4  0.70  0.60 0  0.30
- p.cool.forb   0.160  8.0000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   4  0.80  0.80 0  0.50
- p.warm.forb   0.040  3.0000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   4  0.50  0.20 0  0.40
- a.cool.grass  0.050  50.000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   3  0.40  0.90 0  0.30
- p.cool.grass  0.220  15.000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   3  0.30  0.70 0  0.40
- p.warm.grass  0.040   5.000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   3  0.40  0.90 0  0.30
- shrub         0.090  1.0000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   2  0.80  0.40 0  0.40
- succulents	   0.030  0.3100   1  0.0500   8     1       0   1		1		 0		0		0	    0     0  0.00000   2  0.80  0.40 0  0.40
-# a.warm.grass 0.000  5.0000   1  0.0500   2     1       0   0      1        0      0       0       0     1  0.00000   3  0.20  0.80 0  0.20
+ sagebrush     0.320  1.0000   1  0.0500   8     1       0   1      1        0      0       0       0     1  0.00000   2  0.50  0.80 5  0.50  15
+ a.cool.forb   0.030  5.0000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   4  0.60  0.50 0  0.40  0
+ a.warm.forb   0.020  3.0000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   4  0.70  0.60 0  0.30  0
+ p.cool.forb   0.160  8.0000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   4  0.80  0.80 0  0.50  0
+ p.warm.forb   0.040  3.0000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   4  0.50  0.20 0  0.40  0
+ a.cool.grass  0.050  50.000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   3  0.40  0.90 0  0.30  0
+ p.cool.grass  0.220  15.000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   3  0.30  0.70 0  0.40  0
+ p.warm.grass  0.040   5.000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   3  0.40  0.90 0  0.30  0
+ shrub         0.090  1.0000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   2  0.80  0.40 0  0.40  0
+ succulents	   0.030  0.3100   1  0.0500   8     1       0   1		1		 0		0		0	    0     0  0.00000   2  0.80  0.40 0  0.40  0 
+# a.warm.grass 0.000  5.0000   1  0.0500   2     1       0   0      1        0      0       0       0     1  0.00000   3  0.20  0.80 0  0.20  0
 
 [end]  # section end
 
