--- a/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/species.in
+++ b/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/species.in
@@ -74,7 +74,7 @@
 #
 #TM - koma is a short lived perennial (guess max age 5yrs); pose long-lived perennial (age similar to BOGR?)
 #
-#TM - age - acmi (10), phho (10), arfr (10) best guesses
+#TM - age - acmi (10), phho (10), arfr (5), pssp (35), oppo (30) best guesses
 #
 #TM - NEED: maxbio for species, pestab, ratep, 
 #
@@ -82,7 +82,7 @@
 #
 #TM - acmi biomass Higgins and Mack 1987, spcr biomass luecro et al 2008, trdu biomass Reichman and Smith 1991 figure 2
 #
-#TM - best guesses biomass phho, brar, pose, koma
+#TM - best guesses biomass phho, brar, pssp, koma
 #
 #TM - arfr and lipu from LTER ANPP mean value for all years in 0.25m2 plot
 #
@@ -97,24 +97,24 @@
 #		ALSO tested max age for ARTR - found that model is not very sensitive to max age but literature shows 100-150 max age
 # name     rg  age  irate    ratep slow disturb pestab     eind minbio  maxbio  clonal vegindv tclass  cosurv  onoff
 
- artr       1   150 0.02000 0.900    4       3    0.05000   2   2.000  400.00      n       0       2  0.0100     1
+ artr       1   100 0.02000 0.900    4       3    0.05000   2   2.000  400.00      n       0       2  0.0100     1
  trdu       2    1  0.94700 0.900    2       3    0.0300    5   0.035   4.700      n       0       2  0.0000     0
  cryp       2    1  0.94700 0.900    2       3    0.0300    5   0.035   4.700      n       0       2  0.0000     1
  amre       3    1  0.94700 0.900    2       3    0.0300    5   0.035   4.429      n       0       2  0.0000     0
  chen       3    1  0.94700 0.900    2       2    0.0300    5   0.035   4.429      n       0       1  0.0000     1
  acmi       4   10  0.42600 0.900    2       3    0.15000   6   0.035   5.000      n       3       2  0.0100     0
- phho       4   15  0.42600 0.900    2       3    0.15000   6   0.035   5.000      n       3       2  0.0100     1
- arfr       5   10  0.42600 0.900    2       3    0.10000   4   0.035   7.480      n       3       2  0.0100     1
+ phho       4   10  0.42600 0.900    2       3    0.15000   6   0.035   5.000      n       3       2  0.0100     1
+ arfr       5    5  0.42600 0.900    2       3    0.10000   4   0.035   7.480      n       3       2  0.0100     1
  lipu       5   35  0.42600 0.900    2       3    0.10000   4   0.035   7.480      n       0       2  0.0100     0
  brte       6    1  0.94700 0.900    2       3    0.01500   20  0.020   5.000	   n       0       2  0.0000     1
  vuoc       6    1  0.94700 0.900    2       1    0.0300    16  0.020   5.000      n       0       2  0.0000     0
- pssp       7    0  0.47400 0.900    2       3    0.1500    2   0.500  15.096      y       3       2  0.0100     1
- koma       7    0  0.47400 0.900    2       3    0.1500    2   0.500  15.096      y       3       2  0.0100     0
- bogr       8    0  0.47400 0.900    2       2    0.0500    2   0.605  15.096      y       3       1  0.0100     0
- spcr       8    0  0.47400 0.900    2       3    0.0500    3   0.605   6.000      y       0       1  0.0100     1
+ pssp       7   35  0.47400 0.900    2       3    0.1500    2   0.500  15.096      y       3       2  0.0100     1
+ koma       7    5  0.47400 0.900    2       3    0.1500    2   0.500  15.096      y       3       2  0.0100     0
+ bogr       8   35  0.47400 0.900    2       2    0.0500    2   0.605  15.096      y       3       1  0.0100     0
+ spcr       8   29  0.47400 0.900    2       3    0.0500    3   0.605   6.000      y       0       1  0.0100     1
  gusa       9   35  0.20000 0.900    2       3    0.1500    2   0.986  12.126      n       0       2  0.0100     0
  chvi       9   35  0.20000 0.900    2 	     2 	  0.1500    2   0.986  70.726      n       0       2  0.0100     1
- oppo       10   0  0.28900 0.900    4       4    0.05000   1   2.250   15.00      y       3       1  0.0100     1	
+ oppo       10  30  0.28900 0.900    4       4    0.05000   1   2.250   15.00      y       3       1  0.0100     1	
 #spp1       7    1  0.94700 0.900    2       3    0.01500   2   0.020   0.429      n       0       2  0.0000     0
 #spp2       7    1  0.94700 0.900    2       3    0.01500   2   0.020   2.126      n       0       2  0.0000     0
 
