--- a/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/species.in
+++ b/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/species.in
@@ -70,7 +70,7 @@
 #
 #TM - lipu, gusa, spcr max life span from Lauenroth and Adler 2008 - not sure I believe GUSA though...
 #
-#TM - chvi lifespan from targhee national forest ecological inventory - ebook google books
+#TM - chvi lifespan from Peter Adler
 #
 #TM - koma is a short lived perennial (guess max age 5yrs); pose long-lived perennial (age similar to BOGR?)
 #
@@ -113,7 +113,7 @@
  bogr       8   35  0.47400 0.900    2       2    0.0500    2   0.605  15.096      y       3       1  0.0100     0
  spcr       8   29  0.47400 0.900    2       3    0.0500    3   0.605   6.000      y       0       1  0.0100     1
  gusa       9   35  0.20000 0.900    2       3    0.1500    2   0.986  12.126      n       0       2  0.0100     0
- chvi       9   35  0.20000 0.900    2 	     2 	  0.1500    2   0.986  70.726      n       0       2  0.0100     1
+ chvi       9   17  0.20000 0.900    2 	     2 	  0.1500    2   0.986  70.726      n       0       2  0.0100     1
  oppo       10  30  0.28900 0.900    4       4    0.05000   1   2.250   15.00      y       3       1  0.0100     1	
 #spp1       7    1  0.94700 0.900    2       3    0.01500   2   0.020   0.429      n       0       2  0.0000     0
 #spp2       7    1  0.94700 0.900    2       3    0.01500   2   0.020   2.126      n       0       2  0.0000     0
