--- a/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/species.in
+++ b/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/species.in
@@ -49,72 +49,52 @@
 #      see also the same flag in group parameters file.
 # dispersal = turn on/off seed dispersal for this species. 1=use, 0=don't use.
 # 	dispersal is only applicable when using gridded option.
-#      
-#TM - eind values are density values taken from Adler datasets from Idaho. Species vuoc (1090), bogr, spcr, brar (2080), are from Karl et al 1999.
-#	 Species arfr, gusa, spp1, spp2, are TM's best guesses)
-#
+
+###PARAMETER SOURCES     
+#TM - eind values are density values taken from Adler datasets from Idaho. Species vuoc (1090), bogr, spcr, brar (2080), are from Karl et al 1999
+#     arfr, gusa, spp1, spp2, are TM's best guesses)
 #TM - irate is from Bradford and Launeroth 2006 Table A1.4.  If a species fell in those functional groups it was
 #	given the irate values. All forbs recieved the same values
-#
 #TM - maxbio for sagebrush is mean biomass from site B (calculated using Cleary et al 2008)
-#
-#TM - changed all "disturb" to 3
-#
 #TM - minbio & vegindv(used values from Bradford and Lauenroth 2006, Table A1.4)
-#
-#TM - set all vegindv to 3 (number used acroos the board in Bradford and Lauenroth 2006)
-#
-#TM - set cosurv to 0.01 for perennials and 0.00 for annuals (arbitrary best guesses to start with)
-#
-#TM - 4.18.15 - changes grsp to lipu because of the disputed life history of grsq (annual, biennial, or short lived perennial)
-#
-#TM - lipu, gusa, spcr max life span from Lauenroth and Adler 2008 - not sure I believe GUSA though...
-#
-#TM - chvi lifespan from Peter Adler
-#
-#TM - koma is a short lived perennial (guess max age 5yrs); pose long-lived perennial (age similar to BOGR?)
-#
-#TM - age - acmi (10), phho (10), arfr (5), pssp (35), oppo (30) best guesses
-#
-#TM - NEED: maxbio for species, pestab, ratep, 
-#
-#TM - used SGSLTER parameters for BOGR, CHVI(chna), gusa, vuoc, chen(chal)
-#
-#TM - acmi biomass Higgins and Mack 1987, spcr biomass luecro et al 2008, trdu biomass Reichman and Smith 1991 figure 2
-#
 #TM - best guesses biomass phho, brar, pssp, koma
-#
+#TM - acmi biomass Higgins and Mack 1987, spcr biomass luecro et al 2008, trdu biomass Reichman and Smith 1991 figure 2
 #TM - arfr and lipu from LTER ANPP mean value for all years in 0.25m2 plot
-#
-# pestab for bogr, vuoc, chna, gusa from testing folder for shortgrass steppe 
-#
+#TM - set all vegindv to 3 (number used across the board in Bradford and Lauenroth 2006)
+#TM - set cosurv to 0.01 for perennials and 0.00 for annuals (arbitrary best guesses to start with)
+#TM - 4.18.15: changed grsp to lipu because of the disputed life history of grsq (annual, biennial, or short lived perennial)
+#TM - lipu, gusa, spcr max life span from Lauenroth and Adler 2008 - not sure I believe GUSA though...
+#TM - chvi lifespan from Peter Adler, unpublished data
+#TM - koma is a short lived perennial (guess max age 5yrs); pose long-lived perennial (age similar to BOGR?)
+#KP - age - acmi (10), phho (10), arfr (5), pssp (35), oppo (30) best guesses
+#TM - maxage for LIPU comes from Walsh, Roberta A. (1993) Liatris punctata. In: Fire Effects Information System, [Online]. U.S. Department of Agriculture, Forest Service, Rocky Mountain Research Station, Fire Sciences Laboratory (Producer). Retrieved 11-26-2011
+#TM - ARTR age from Ferguson 1964- Annual rings in big sagebrush book
+#TM - used SGSLTER parameters for all parameters for BOGR, CHVI(chna), gusa, vuoc, chen(chal)
 #TM - gusa and chvi rates from C&L 1990
-#ARTR age from Ferguson 1964- Annual rings in big sagebrush
-# need to re-assess maxbio values for pose and koma
-# maxage for LIPU comes from Walsh, Roberta A. (1993) Liatris punctata. In: Fire Effects Information System, [Online]. U.S. Department of Agriculture, Forest Service, Rocky Mountain Research Station, Fire Sciences Laboratory (Producer). Retrieved 11-26-2011
 #TM 10.6.2015 - testing different irate for ARTR: found 0.02 or 0.03 works best for ARTR
 #		ALSO tested max biomass for ARTR - found 400 worked best but is flexible 200-500 with above irates
 #		ALSO tested max age for ARTR - found that model is not very sensitive to max age but literature shows 100-150 max age
-# name     rg  age  irate    ratep slow disturb pestab     eind minbio  maxbio  clonal vegindv tclass  cosurv  onoff
 
+# name     rg  age  irate    ratep slow disturb pestab     eind minbio  maxbio  clonal vegindv tclass  cosurv  onoff
  artr       1   100 0.02000 0.900    4       3    0.05000   2   2.000  400.00      n       0       2  0.0100     1
  trdu       2    1  0.94700 0.900    2       3    0.0300    5   0.035   4.700      n       0       2  0.0000     0
  cryp       2    1  0.94700 0.900    2       3    0.0300    5   0.035   4.700      n       0       2  0.0000     1
  amre       3    1  0.94700 0.900    2       3    0.0300    5   0.035   4.429      n       0       2  0.0000     0
  chen       3    1  0.94700 0.900    2       2    0.0300    5   0.035   4.429      n       0       1  0.0000     1
- acmi       4   10  0.42600 0.900    2       3    0.15000   6   0.035   5.000      n       3       2  0.0100     0
- phho       4   10  0.42600 0.900    2       3    0.15000   6   0.035   5.000      n       3       2  0.0100     1
- arfr       5    5  0.42600 0.900    2       3    0.10000   4   0.035   7.480      n       3       2  0.0100     1
+ acmi       4   10  0.42600 0.900    2       3    0.15000   6   0.035   5.000      n       0       2  0.0100     0
+ phho       4   10  0.42600 0.900    2       3    0.15000   6   0.035   5.000      n       0       2  0.0100     1
+ arfr       5    5  0.42600 0.900    2       3    0.10000   4   0.035   7.480      n       0       2  0.0100     1
  lipu       5   35  0.42600 0.900    2       3    0.10000   4   0.035   7.480      n       0       2  0.0100     0
- brte       6    1  0.94700 0.900    2       3    0.01500   20  0.020   5.000	   n       0       2  0.0000     1
+ brte       6    1  0.94700 0.900    2       3    0.01500   20  0.020   5.000	n       0       2  0.0000     1
  vuoc       6    1  0.94700 0.900    2       1    0.0300    16  0.020   5.000      n       0       2  0.0000     0
  pssp       7   35  0.47400 0.900    2       3    0.1500    2   0.500  15.096      y       3       2  0.0100     1
  koma       7    5  0.47400 0.900    2       3    0.1500    2   0.500  15.096      y       3       2  0.0100     0
  bogr       8   35  0.47400 0.900    2       2    0.0500    2   0.605  15.096      y       3       1  0.0100     0
  spcr       8   29  0.47400 0.900    2       3    0.0500    3   0.605   6.000      y       0       1  0.0100     1
  gusa       9   35  0.20000 0.900    2       3    0.1500    2   0.986  12.126      n       0       2  0.0100     0
- chvi       9   17  0.20000 0.900    2 	     2 	  0.1500    2   0.986  70.726      n       0       2  0.0100     1
+ chvi       9   17  0.20000 0.900    2 	2    0.1500    2   0.986  70.726      n       0       2  0.0100     1
  oppo       10  30  0.28900 0.900    4       4    0.05000   1   2.250   15.00      y       3       1  0.0100     1	
+
 #spp1       7    1  0.94700 0.900    2       3    0.01500   2   0.020   0.429      n       0       2  0.0000     0
 #spp2       7    1  0.94700 0.900    2       3    0.01500   2   0.020   2.126      n       0       2  0.0000     0
 
@@ -134,8 +114,9 @@
  trdu        10    1.00
  amre        10    1.00
  chen        10    1.00
- #spp1        10    1.00
- #spp2        10    1.00
+ 
+#spp1       10    1.00
+#spp2       10    1.00
 
 [end]  # end of additional annuals-only parameters.
 
