--- a/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
@@ -50,7 +50,7 @@
 # xgrow = extra growth factor; if > 0, plants can convert "extra" ppt
 #         into ephemeral (this year's) biomass by
 #         grams_extra_biomass = mm_extra_ppt * xgrow_factor
-# veg_prod_type = 1 for tree, 2 for shrub, & 3 for grass.  Refer to soilwat's VegProd types in VegProd.h.
+# veg_prod_type = 1 for tree, 2 for shrub, 3 for grass & 4 for forb.  Refer to soilwat's VegProd types in VegProd.h.
 # proportion_killed = proportionally killed all members of the group at given kill year.
 # proportion_recovered = proportionally recovered all members of the group after kill year.
 # grazing_frq = frequency to grazing.  if < 1, yearly probability,
@@ -68,10 +68,9 @@
 #TM - need density for a.warm.grass - but right now turned off so insterted arbitraty number
 # space parameter for sagebrush, p.cool.grass, p.warm.grass, a.cool.grass, a.warm.grass, forbs from Bradford & Lauenroth 2006
 # space parameter for shrubs was a guess (KP) 
-#
 #TM 10.6.2015 - tested various stretch values for sagebrush and found stretch of 8 to be best paired with irate 0.02
-# name     space  density maxest slow stretch xres  estann  on  startyr killyr killfreq_startyr killfrq  extirp  mort  xgrow  veg_prod_type  proportion_killed proportion_recovered grazing_frq proportion_grazing  grazingfreq_startyr
 
+# name     space  density maxest slow stretch xres  estann  on  startyr killyr killfreq_startyr killfrq  extirp  mort  xgrow  veg_prod_type  proportion_killed proportion_recovered grazing_frq proportion_grazing  grazingfreq_startyr
  sagebrush     0.320  1.0000   1  0.0500   8     1       0   1      1        0      0       0       0     1  0.00000   2  1.00  0.00 0  0.00  0
  a.cool.forb   0.030  5.0000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   4  1.00  0.00 0  0.24  0
  a.warm.forb   0.020  3.0000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   4  1.00  0.00 0  0.24  0
@@ -95,11 +94,9 @@
 # wetint = intercept of resource availability in wet years
 # dryslope = slope of res.avail. in dry years (EQN 3)
 # dryint   = intercept of res.avail. in dry years
-#
-#TM - these are the values from the testing.sagebrush.bradford folder
+#TM - these are the values from Bradford and Lauenroth 2006
 
 # name            nslope   nint     wetslope wetint   dryslope dryint  
-
 sagebrush 	      0.00093  0.70935  0.00093  0.70935  0.00093  0.70935
 a.cool.forb 	  0.00093  0.70935  0.00093  0.70935  0.00093  0.70935
 a.warm.forb 	  0.00093  0.70935  0.00093  0.70935  0.00093  0.70935
